# ai-tinkerers-paris-advanced-cu

./: .gitignore  README.md  hello.py  knowledge_extractor.py  pyproject.toml
app/: app.py
claude-computer-use-macos/: README.md  main.py  paris-facts.txt
claude-computer-use-macos/computer_use_demo/tools/: computer.py
ingestor/: splitter.py
