[project]
name = "paris-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "langchain-anthropic>=0.3.7",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.35",
    "moviepy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.0.1",
    "pytube>=15.0.0",
    "streamlit>=1.42.0",
    "whisperx>=3.3.1",
    "yt-dlp>=2025.1.26",
]
